# (C) Copyright 2017-2018 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

set ( filters_files
      BackgroundCheck.cc
      BackgroundCheck.h
      BayesianBackgroundQCFlags.cc
      BayesianBackgroundQCFlags.h
      BayesianBackgroundCheck.cc
      BayesianBackgroundCheck.h
      BlackList.cc
      BlackList.h
      ConventionalProfileProcessing.cc
      ConventionalProfileProcessing.h
      ConventionalProfileProcessingParameters.h
      CopyFlagsFromExtendedToOriginalSpace.cc
      CopyFlagsFromExtendedToOriginalSpace.h
      CreateDiagnosticFlags.cc
      CreateDiagnosticFlags.h
      DiagnosticFlag.h
      DifferenceCheck.cc
      DifferenceCheck.h
      FilterBase.cc
      FilterBase.h
      FilterParametersBase.cc
      FilterParametersBase.h
      FilterUtils.cc
      FilterUtils.h
      FinalCheck.cc
      FinalCheck.h
      GenericFilterParameters.h
      getScalarOrFilterData.cc
      getScalarOrFilterData.h
      HistoryCheck.cc
      HistoryCheck.h
      HistoryCheckParameters.h
      ImpactHeightCheck.cc
      ImpactHeightCheck.h
      ObsBoundsCheck.cc
      ObsBoundsCheck.h
      ObsProcessorBase.cc
      ObsProcessorBase.h
      MetOfficeBuddyCheck.cc
      MetOfficeBuddyCheck.h
      MetOfficeBuddyCheckParameters.h
      MetOfficeBuddyCollector.cc
      MetOfficeBuddyCollector.h
      MetOfficeBuddyCollectorV1.cc
      MetOfficeBuddyCollectorV1.h
      MetOfficeBuddyCollectorV2.cc
      MetOfficeBuddyCollectorV2.h
      MetOfficeBuddyPair.h
      MetOfficeBuddyPairFinder.cc
      MetOfficeBuddyPairFinder.h
      MetOfficeDuplicateCheck.cc
      MetOfficeDuplicateCheck.h
      MetOfficePressureConsistencyCheck.cc
      MetOfficePressureConsistencyCheck.h
      ModelBestFitPressure.cc
      ModelBestFitPressure.h
      ModelObThreshold.cc
      ModelObThreshold.h
      MWCLWCheck.cc
      MWCLWCheck.h
      ObsDiagnosticsWriter.cc
      ObsDiagnosticsWriter.h
      ObsDomainCheck.cc
      ObsDomainCheck.h
      ObsDerivativeCheck.cc
      ObsDerivativeCheck.h
      ObsDomainErrCheck.cc
      ObsDomainErrCheck.h
      ObsFilterData.cc
      ObsFilterData.h
      ObsRefractivityGradientCheck.h
      ObsRefractivityGradientCheck.cc
      PreQC.cc
      PreQC.h
      ProbabilityGrossErrorWholeReport.cc
      ProbabilityGrossErrorWholeReport.h
      ProcessAMVQI.cc
      ProcessAMVQI.h
      QCflags.h
      QCmanager.cc
      QCmanager.h
      PerformAction.cc
      PerformAction.h
      ProfileAverageObsToModLevels.cc
      ProfileAverageObsToModLevels.h
      ProfileBackgroundCheck.cc
      ProfileBackgroundCheck.h
      ProfileFewObsCheck.cc
      ProfileFewObsCheck.h
      ProfileMaxDifferenceCheck.cc
      ProfileMaxDifferenceCheck.h
      ProfileUnFlagObsCheck.cc
      ProfileUnFlagObsCheck.h
      SatName.h
      SatName.cc
      SatwindInversionCorrection.cc
      SatwindInversionCorrection.h
      SpikeAndStepCheck.cc
      SpikeAndStepCheck.h
      StuckCheck.cc
      StuckCheck.h
      StuckCheckParameters.h
      SuperOb.h
      SuperOb.cc
      SuperRefractionCheckImpactParameter.h
      SuperRefractionCheckImpactParameter.cc
      SuperRefractionCheckNBAM.h
      SuperRefractionCheckNBAM.cc
      obsfunctions/DrawObsErrorFromFile.cc
      obsfunctions/DrawObsErrorFromFile.h
      obsfunctions/DrawValueFromFile.cc
      obsfunctions/DrawValueFromFile.h
      Thinning.cc
      Thinning.h
      TemporalThinning.cc
      TemporalThinning.h
      TemporalThinningParameters.h
      TrackCheck.cc
      TrackCheck.h
      TrackCheckParameters.h
      TrackCheckShip.cc
      TrackCheckShip.h
      TrackCheckShipDiagnostics.h
      TrackCheckShipParameters.h
      TrackCheckUtils.cc
      TrackCheckUtils.h
      TrackCheckUtilsParameters.cc
      TrackCheckUtilsParameters.h
      Variable.cc
      Variable.h
      VariableTransforms.cc
      VariableTransforms.h
      VariableTransformParametersBase.h
      Variables.cc
      Variables.h
      VariableAssignment.cc
      VariableAssignment.h
      AcceptList.cc
      AcceptList.h
      Gaussian_Thinning.cc
      Gaussian_Thinning.h
      GaussianThinningParameters.cc
      GaussianThinningParameters.h
      PoissonDiskThinning.cc
      PoissonDiskThinning.h
      PoissonDiskThinningParameters.cc
      PoissonDiskThinningParameters.h
      processWhere.cc
      processWhere.h
      ObsAccessor.cc
      ObsAccessor.h
      PrintFilterData.cc
      PrintFilterData.h
      actions/AssignError.cc
      actions/AssignError.h
      actions/AcceptObs.cc
      actions/AcceptObs.h
      actions/FilterAction.cc
      actions/FilterAction.h
      actions/FilterActionBase.cc
      actions/FilterActionBase.h
      actions/FlagOriginalAndAveragedProfiles.cc
      actions/FlagOriginalAndAveragedProfiles.h
      actions/InflateError.cc
      actions/InflateError.h
      actions/PassivateObs.cc
      actions/PassivateObs.h
      actions/ReduceObsSpace.cc
      actions/ReduceObsSpace.h
      actions/RejectObs.cc
      actions/RejectObs.h
      actions/SetFlag.cc
      actions/SetFlag.h
      actions/SetFlagBit.cc
      actions/SetFlagBit.h
      obsfunctions/AircraftBiasCorrectionTerm.cc
      obsfunctions/AircraftBiasCorrectionTerm.h
      obsfunctions/AverageTemperatureBelow.cc
      obsfunctions/AverageTemperatureBelow.h
      obsfunctions/BennartzScatIndex.cc
      obsfunctions/BennartzScatIndex.h
      obsfunctions/ChannelUseflagCheckRad.cc
      obsfunctions/ChannelUseflagCheckRad.h
      obsfunctions/CLWMatchIndexMW.cc
      obsfunctions/CLWMatchIndexMW.h
      obsfunctions/CLWRetMW.cc
      obsfunctions/CLWRetMW.h
      obsfunctions/TotalColumnVaporGuess.cc
      obsfunctions/TotalColumnVaporGuess.h
      obsfunctions/CLWRetMW_SSMIS.cc
      obsfunctions/CLWRetMW_SSMIS.h
      obsfunctions/CLWRetSymmetricMW.cc
      obsfunctions/CLWRetSymmetricMW.h
      obsfunctions/Conditional.cc
      obsfunctions/Conditional.h
      obsfunctions/AssignValueEqualChannels.cc
      obsfunctions/AssignValueEqualChannels.h
      obsfunctions/SetSeaIceEmiss.cc
      obsfunctions/SetSeaIceEmiss.h
      obsfunctions/SetSurfaceType.cc
      obsfunctions/SetSurfaceType.h
      obsfunctions/SIRetMW.cc
      obsfunctions/SIRetMW.h
      obsfunctions/SIRetSymmetricMW.cc
      obsfunctions/SIRetSymmetricMW.h
      obsfunctions/Emissivity_Diff_GMI.cc
      obsfunctions/Emissivity_Diff_GMI.h
      obsfunctions/HydrometeorCheckAMSUA.cc
      obsfunctions/HydrometeorCheckAMSUA.h
      obsfunctions/HydrometeorCheckATMS.cc
      obsfunctions/HydrometeorCheckATMS.h
      obsfunctions/HydrometeorCheckAMSUAclr.cc
      obsfunctions/HydrometeorCheckAMSUAclr.h
      obsfunctions/ImpactHeight.cc
      obsfunctions/ImpactHeight.h
      obsfunctions/InterChannelConsistencyCheck.cc
      obsfunctions/InterChannelConsistencyCheck.h
      obsfunctions/LiquidWaterPathGuess.cc
      obsfunctions/LiquidWaterPathGuess.h
      obsfunctions/BgdDepartureAnomaly.cc
      obsfunctions/BgdDepartureAnomaly.h
      obsfunctions/ObsErrorModelHumidity.cc
      obsfunctions/ObsErrorModelHumidity.h
      obsfunctions/ObsErrorModelStepwiseLinear.cc
      obsfunctions/ObsErrorModelStepwiseLinear.h
      obsfunctions/ObsErrorModelRamp.cc
      obsfunctions/ObsErrorModelRamp.h
      obsfunctions/ObsErrorModelQuad.cc
      obsfunctions/ObsErrorModelQuad.h
      obsfunctions/ObsFunction.cc
      obsfunctions/ObsFunction.h
      obsfunctions/ObsFunctionArithmetic.cc
      obsfunctions/ObsFunctionArithmetic.h
      obsfunctions/ObsFunctionBase.cc
      obsfunctions/ObsFunctionBase.h
      obsfunctions/CloudCostFunction.cc
      obsfunctions/CloudCostFunction.h
      obsfunctions/CloudDetectMinResidualAVHRR.cc
      obsfunctions/CloudDetectMinResidualAVHRR.h
      obsfunctions/CloudDetectMinResidualIR.cc
      obsfunctions/CloudDetectMinResidualIR.h
      obsfunctions/CloudFirstGuessMinimumResidual.cc
      obsfunctions/CloudFirstGuessMinimumResidual.h
      obsfunctions/MetOfficeAllSkyErrorModel.cc
      obsfunctions/MetOfficeAllSkyErrorModel.h
      obsfunctions/ModelHeightAdjustedWindVectorComponent.cc
      obsfunctions/ModelHeightAdjustedWindVectorComponent.h
      obsfunctions/ModelHeightAdjustedAirTemperature.cc
      obsfunctions/ModelHeightAdjustedAirTemperature.h
      obsfunctions/ModelHeightAdjustedRelativeHumidity.cc
      obsfunctions/ModelHeightAdjustedRelativeHumidity.h
      obsfunctions/ModelHeightAdjustedMarineWind.cc
      obsfunctions/ModelHeightAdjustedMarineWind.h
      obsfunctions/ObsErrorBoundConventional.cc
      obsfunctions/ObsErrorBoundConventional.h
      obsfunctions/ObsErrorBoundIR.cc
      obsfunctions/ObsErrorBoundIR.h
      obsfunctions/ObsErrorBoundMW.cc
      obsfunctions/ObsErrorBoundMW.h
      obsfunctions/ObsErrorSatSpecHumidity.cc
      obsfunctions/ObsErrorSatSpecHumidity.h
      obsfunctions/ObsErrorFactorDuplicateCheck.cc
      obsfunctions/ObsErrorFactorDuplicateCheck.h
      obsfunctions/ObsErrorFactorPressureCheck.cc
      obsfunctions/ObsErrorFactorPressureCheck.h
      obsfunctions/ObsErrorFactorSituDependMW.cc
      obsfunctions/ObsErrorFactorSituDependMW.h
      obsfunctions/ObsErrorFactorSurfJacobianRad.cc
      obsfunctions/ObsErrorFactorSurfJacobianRad.h
      obsfunctions/ObsErrorFactorLatRad.cc
      obsfunctions/ObsErrorFactorLatRad.h
      obsfunctions/ObsErrorFactorQuotient.cc
      obsfunctions/ObsErrorFactorQuotient.h
      obsfunctions/ObsErrorFactorTopoRad.cc
      obsfunctions/ObsErrorFactorTopoRad.h
      obsfunctions/ObsErrorFactorTransmitTopRad.cc
      obsfunctions/ObsErrorFactorTransmitTopRad.h
      obsfunctions/ObsErrorFactorWavenumIR.cc
      obsfunctions/ObsErrorFactorWavenumIR.h
      obsfunctions/ObsErrorFactorSfcPressure.cc
      obsfunctions/ObsErrorFactorSfcPressure.h
      obsfunctions/ObsErrorFactorConventional.cc
      obsfunctions/ObsErrorFactorConventional.h
      obsfunctions/NearSSTRetCheckIR.cc
      obsfunctions/NearSSTRetCheckIR.h
      obsfunctions/ObsFunctionElementMultiply.cc
      obsfunctions/ObsFunctionElementMultiply.h
      obsfunctions/ObsFunctionExponential.cc
      obsfunctions/ObsFunctionExponential.h
      obsfunctions/ObsFunctionScattering.cc
      obsfunctions/ObsFunctionScattering.h
      obsfunctions/ObsFunctionSelectStatistic.cc
      obsfunctions/ObsFunctionSelectStatistic.h
      obsfunctions/ObsFunctionStringManipulation.cc
      obsfunctions/ObsFunctionStringManipulation.h
      obsfunctions/ObsFunctionVelocity.cc
      obsfunctions/ObsFunctionVelocity.h
      obsfunctions/OceanPressureToDepth.cc
      obsfunctions/OceanPressureToDepth.h
      obsfunctions/OrbitAngle.cc
      obsfunctions/OrbitAngle.h
      obsfunctions/SatwindIndivErrors.cc
      obsfunctions/SatwindIndivErrors.h
      obsfunctions/SatWindsLNVDCheck.cc
      obsfunctions/SatWindsLNVDCheck.h
      obsfunctions/WindsSPDBCheck.cc
      obsfunctions/WindsSPDBCheck.h
      obsfunctions/SatWindsErrnormCheck.cc
      obsfunctions/SatWindsErrnormCheck.h
      obsfunctions/ScatWindsAmbiguityCheck.cc
      obsfunctions/ScatWindsAmbiguityCheck.h
      obsfunctions/SCATRetMW.cc
      obsfunctions/SCATRetMW.h
      obsfunctions/SymmCldImpactIR.cc
      obsfunctions/SymmCldImpactIR.h
      obsfunctions/SolarZenith.cc
      obsfunctions/SolarZenith.h
      obsfunctions/SunGlintAngle.cc
      obsfunctions/SunGlintAngle.h
      obsfunctions/SurfTypeCheckRad.cc
      obsfunctions/SurfTypeCheckRad.h
      obsfunctions/SurfaceCloudCreateCloudColumn.cc
      obsfunctions/SurfaceCloudCreateCloudColumn.h
      obsfunctions/SurfaceCloudModelLevelCBH.cc
      obsfunctions/SurfaceCloudModelLevelCBH.h
      obsfunctions/TropopauseEstimate.cc
      obsfunctions/TropopauseEstimate.h
      obsfunctions/WindDirAngleDiff.cc
      obsfunctions/WindDirAngleDiff.h
      obsfunctions/WindUVfromObsSpdHofxDir.cc
      obsfunctions/WindUVfromObsSpdHofxDir.h
      obsfunctions/LAMDomainCheck/LAMDomainCheck.cc
      obsfunctions/LAMDomainCheck/LAMDomainCheck.h
      obsfunctions/LAMDomainCheck/LAMDomainCheck.interface.h
      obsfunctions/LAMDomainCheck/LAMDomainCheck.interface.F90
      obsfunctions/LAMDomainCheck/esg_grid_mod.F90
      obsfunctions/ProfileAverageObsPressure.cc
      obsfunctions/ProfileAverageObsPressure.h
      obsfunctions/ProfileLevelCount.cc
      obsfunctions/ProfileLevelCount.h
      obsfunctions/DateTimeOffset.cc
      obsfunctions/DateTimeOffset.h
      obsfunctions/FillAveragedProfileData.cc
      obsfunctions/FillAveragedProfileData.h
      obsfunctions/MetOfficeRelativeHumidityCorrection.cc
      obsfunctions/MetOfficeRelativeHumidityCorrection.h
      obsfunctions/RadarScanEdgeFlag.cc
      obsfunctions/RadarScanEdgeFlag.h
      obsfunctions/RecordNumberToObsSpace.cc
      obsfunctions/RecordNumberToObsSpace.h
)

if( ${gsw_FOUND} )
  list( APPEND filters_files OceanVerticalStabilityCheck.cc
                             OceanVerticalStabilityCheck.h )
endif( ${gsw_FOUND} )

if( ${rttov_FOUND} )
  add_subdirectory( rttovonedvarcheck )
  list( APPEND filters_files ${rttovonedvarcheck_src_files} )
endif( ${rttov_FOUND} )

add_subdirectory( gnssroonedvarcheck )
list( APPEND filters_files ${gnssroonedvarcheck_src_files} )

PREPEND( _p_filters_files       "filters"       ${filters_files} )

set ( filters_src_files
      ${_p_filters_files}
      PARENT_SCOPE
)
