# (C) Copyright 2020-2021 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

add_subdirectory(airs)
add_subdirectory(amsua)
add_subdirectory(atms)
add_subdirectory(cris)
add_subdirectory(iasi)
add_subdirectory(mhs)
add_subdirectory(seviri)

