# (C) Copyright 2020-2021 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

add_subdirectory(Aircraft_obs)
add_subdirectory(airs)
add_subdirectory(amsua)
add_subdirectory(atms)
add_subdirectory(cris)
add_subdirectory(iasi)
add_subdirectory(mhs)
add_subdirectory(radarVAD)
add_subdirectory(RadioAcousticSounder)
add_subdirectory(SatWinds_AMV)
add_subdirectory(Scatterometer)
add_subdirectory(Sonde)
add_subdirectory(seviri)
add_subdirectory(Surface_land_obs)
add_subdirectory(Surface_marine_obs)

