# (C) Copyright 2022 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

add_subdirectory(errors)
add_subdirectory(filters)
add_subdirectory(fov)
add_subdirectory(operators)
add_subdirectory(predictors)
add_subdirectory(profile)
add_subdirectory(utils)
add_subdirectory(variabletransforms)
